scss/partials/_base.scss
@import "../modules/_colors";
@import "../modules/_fonts";

/*
Comment font-weight to font name mapping: https://developer.mozilla.org/en-US/docs/Web/CSS/font-weight

100 Thin (Hairline)
200 Extra Light (Ultra Light)
300 Light
400 Normal
500 Medium
600 Semi Bold (Demi Bold)
700 Bold 
800 Extra Bold (Ultra Bold)
900 Black (Heavy)
*/

html, body {
  font-family: $oc_main_font;
  font-size: 16px;
  background-color: white;
  overflow-x: hidden;
  height: 100vh;
  background-color: #d9d9d9;
}

.no-scroll {
  overflow: hidden;
}

h1, h2, h3, h4, h5, h6, .oc-header {
  font-family: $oc_headers_font;
}

a {
  cursor: pointer;
}

a:hover, a:hover *{
  text-decoration: none;
}

.group:after {
  content: "";
  display: table;
  clear: both;
}

/*
 * Global add-ons
 */
 .sub-header {
    padding-bottom: 10px;
    border-bottom: 1px solid #eee;
}

/*
 * Main content
 */
 .main {
    padding: 0px !important;
}
@include mobile(){
    .main {
        padding-right: 40px;
        padding-left: 40px;
    }
}
.main .page-header {
    margin-top: 0;
}

.hidden {
  display: none;
}
.transparent {
  opacity: 0;
}

span img.user-icon {
  height: 24px;
  width: 24px;
  margin-right: 5px;
}


span.num.red {
  color: red;
}

.form-group {
  margin-bottom: 25px;
}

/* Emoji One */
svg.emojione {
  height: 18px;
  width: 18px;
  display: inline-block;
  vertical-align: text-top;
}

/* Reset bootstrap 3.3.5 help block overflow */
.input-group[class*=col-] {
  float: left;
  padding-left: 15px;
  padding-right: 15px;
}

*::selection {
  background: rgba(249,215,72, 0.5);
}

*::-moz-selection {
  background: rgba(249,215,72, 0.5);
}

