remove fixed height for body and html tags to avoid scroll issues on mobile

--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -20,7 +20,6 @@ html, body {
   font-size: 16px;
   background-color: white;
   overflow-x: hidden;
-  height: 100vh;
   background-color: #d9d9d9;
 }
 
